--- a/Honcizek/Views/Administrador/Proyectos/Details.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Details.cshtml
@@ -43,20 +43,41 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaInicio)
         </dt>
-        <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Finicio)
+        <dd class="col-sm-4">
+            @if (@Model.FechaFinPrevista != null)
+            {
+                @Html.DisplayFor(model=> model.Finicio)
+            }
+            else
+            {
+                <span>Sin especificar</span>
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaFinPrevista)
         </dt>
-        <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FFinPrevista)
+        <dd class="col-sm-4">
+            @if (@Model.FechaFinPrevista != null)
+            {
+                @Html.DisplayFor(model => model.FFinPrevista)
+            }
+            else
+            {
+                <span>Sin especificar</span>
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaFinReal)
         </dt>
-        <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FFin)
+        <dd class="col-sm-4">
+            @if (@Model.FechaFinReal != null)
+            {
+                @Html.DisplayFor(model=> model.FFin)
+            }
+            else
+            {
+                <span>Sin especificar</span>
+            }
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HorasInternasPrevistas)
