--- a/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
@@ -3,81 +3,77 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Editar</h1>
-
-<h4>Proyectos</h4>
-<hr />
+<div class="d-flex">
+    <div class="mr-auto p-2">
+        <h1>Editar</h1>
+        <h4>Proyectos</h4>
+    </div>
+    <div class="align-self-end pr-3">
+        <a asp-controller="Trabajos" asp-action="Index" asp-route-id="@Model.Id">
+            <button class="btn btn-warning">Consultar trabajos</button>
+        </a>
+    </div>
+</div>
+    <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
-                <span asp-validation-for="ClienteId" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Tipo" class="control-label"></label>
+                    <select asp-for="Tipo" class="form-control" asp-items="ViewBag.Tipo"></select>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input data-val="true" asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4 cliente-hide">
+                    <label asp-for="ClienteId" class="control-label">Cliente</label>
+                    <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Tipo" class="control-label"></label>
-                <input asp-for="Tipo" class="form-control" />
-                <span asp-validation-for="Tipo" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-6">
+                    <label asp-for="Descripcion" class="control-label">Descripci&oacute;n</label>
+                    <textarea asp-for="Descripcion" class="form-control"></textarea>
+                </div>
+                <div class="form-group col-6">
+                    <label asp-for="DescripcionDesarrollo" class="control-label">Descripci&oacute;n del desarrollo</label>
+                    <textarea asp-for="DescripcionDesarrollo" class="form-control"></textarea>
+
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="FechaInicio" class="control-label">Fecha de inicio</label>
+                    <input type="date" data-val="false" asp-for="FechaInicio" class="form-control" />
+
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="FechaFinPrevista" class="control-label">Fecha final prevista</label>
+                    <input type="date" asp-for="FechaFinPrevista" class="form-control" />
+
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
-                <span asp-validation-for="Descripcion" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="HorasInternasPrevistas" class="control-label">Horas internas previstas</label>
+                    <input type="number" min="0" value="0" asp-for="HorasInternasPrevistas" class="form-control" />
+
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Estado" class="control-label"></label>
+                    <select asp-for="Estado" class="form-control" asp-items="ViewBag.Estado"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="DescripcionDesarrollo" class="control-label"></label>
-                <input asp-for="DescripcionDesarrollo" class="form-control" />
-                <span asp-validation-for="DescripcionDesarrollo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaRegistro" class="control-label"></label>
-                <input asp-for="FechaRegistro" class="form-control" />
-                <span asp-validation-for="FechaRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaInicio" class="control-label"></label>
-                <input asp-for="FechaInicio" class="form-control" />
-                <span asp-validation-for="FechaInicio" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaFinPrevista" class="control-label"></label>
-                <input asp-for="FechaFinPrevista" class="form-control" />
-                <span asp-validation-for="FechaFinPrevista" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaFinReal" class="control-label"></label>
-                <input asp-for="FechaFinReal" class="form-control" />
-                <span asp-validation-for="FechaFinReal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HorasInternasPrevistas" class="control-label"></label>
-                <input asp-for="HorasInternasPrevistas" class="form-control" />
-                <span asp-validation-for="HorasInternasPrevistas" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
-                <span asp-validation-for="Estado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Fase" class="control-label"></label>
-                <input asp-for="Fase" class="form-control" />
-                <span asp-validation-for="Fase" class="text-danger"></span>
-            </div>
-             <div class="form-group pt-2">
+            <div class="form-group pl-3">
                 <input type="submit" value="Guardar" class="btn btn-info" />
             </div>
         </form>
-        <div class="pt-3">
+        <div class="pt-3 pl-3">
             <a asp-action="Index">
                 <button class="btn btn-primary">Volver al listado</button>
             </a>
