--- a/Honcizek/wwwroot/css/Login/Login.css
+++ b/Honcizek/wwwroot/css/Login/Login.css
@@ -109,9 +109,11 @@ input[type=button], input[type=submit], input[type=reset] {
 }
 
     input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
-        background-color: #39ace7;
+        background-color: #c6a664;
     }
-
+input[type=submit] {
+    background-color: #0B1D6E;
+}
     input[type=button]:active, input[type=submit]:active, input[type=reset]:active {
         -moz-transform: scale(0.95);
         -webkit-transform: scale(0.95);
