Terminada fase de proyecto y creada entidad trabajos de proyecto

--- a/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
@@ -14,7 +14,7 @@
         </a>
     </div>
 </div>
-    <hr />
+<hr />
 <div class="row">
     <div class="col-md-12">
         <form asp-action="Edit">
@@ -69,6 +69,66 @@
                     <select asp-for="Estado" class="form-control" asp-items="ViewBag.Estado"></select>
                 </div>
             </div>
+            <div class="row eq-height fase">
+                <div class="col-12 mb-4 text-center">
+                    <h2 class="d-block mb-0 text-dark">Fase</h2> <br>
+
+                    <ul class="d-inline-block list-unstyled h-25">
+                        <li class="d-inline-block mb-4">
+                            <label class="p-label-fase" for="Analisis">
+                                <input value="Analisis" type="radio" class="d-none" name="Fase" id="Analisis">
+                                <span class="p-esfera c-analisis"> &bull; </span>
+                                An&aacute;lisis
+                            </label>
+                        </li>
+                        <li class="d-inline-block mb-4">
+                            <label class="p-label-fase" for="Diseno">
+                                <input value="Diseno" type="radio" class="d-none" name="Fase" id="Diseno">
+                                <span class="p-esfera c-diseno"> &bull; </span>
+                                Dise&ntilde;o
+                            </label>
+                        </li>
+                        <li class="d-inline-block mb-4">
+                            <label class="p-label-fase" for="Maquetacion">
+                                <input value="Maquetacion" type="radio" class="d-none" name="Fase" id="Maquetacion">
+                                <span class="p-esfera c-maquetacion"> &bull; </span>
+                                Maquetaci&oacute;n
+                            </label>
+                        </li>
+                        <li class="d-inline-block mb-4">
+                            <label class="p-label-fase" for="Desarrollo">
+                                <input value="Desarrollo" type="radio" class="d-none" name="Fase" id="Desarrollo">
+                                <span class="p-esfera c-desarrollo"> &bull; </span>
+                                Desarrollo
+                            </label>
+                        </li>
+                        <li class="d-inline-block mb-4">
+                            <label class="p-label-fase" for="Pruebas internas">
+                                <input value="Pruebas internas" type="radio" class="d-none" name="Fase" id="Pruebas internas">
+                                <span class="p-esfera c-pruebas-internas"> &bull; </span>
+                                Pruebas internas
+                            </label>
+                        </li>
+                        <li class="d-inline-block mb-4">
+                            <label class="p-label-fase" for="Pruebas cliente">
+                                <input value="Pruebas cliente" type="radio" class="d-none" name="Fase" id="Pruebas cliente">
+                                <span class="p-esfera c-pruebas-cliente"> &bull; </span>
+                                Pruebas clientes
+                            </label>
+                        </li>
+                        <li class="d-inline-block mb-4">
+                            <label class="p-label-fase" for="Implantacion">
+                                <input value="Implantacion" type="radio" class="d-none" name="Fase" id="Implantacion">
+                                <span class="p-esfera c-implantacion"> &bull; </span>
+                                Implantaci&oacute;n
+                            </label>
+                        </li>
+                    </ul>
+                    <div class="progress">
+                        <div class="progress-bar" id="fases"></div>
+                    </div>
+                </div>
+            </div>
             <div class="form-group pl-3">
                 <input type="submit" value="Guardar" class="btn btn-info" />
             </div>
@@ -83,5 +143,13 @@
 
 
 @section Scripts {
+    <script type="text/javascript" src="~/js/Administrador/Proyectos/Proyectos.js"></script>
+    <script type="text/javascript" src="~/js/Administrador/Proyectos/Progress.js"></script>
+    <script>
+        $(document).ready(function () {
+            Proyectos.init(true);
+            Progress.init("@Model.Fase");
+        });
+    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
