--- a/Honcizek/Views/Administrador/Trabajos/Delete.cshtml
+++ b/Honcizek/Views/Administrador/Trabajos/Delete.cshtml
@@ -35,7 +35,7 @@
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Borrar" class="btn btn-danger" />
     </form>
-	<a asp-action="Index">
-			<button class="btn btn-primary">Volver al listado</button>
-		</a>
+    <a asp-controller="Trabajos" asp-action="Index" asp-route-id="@Model.ProyectoId">
+        <button class="btn btn-primary">Volver al listado</button>
+    </a>
 </div>
