--- a/Honcizek/Views/Administrador/Trabajos/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Trabajos/Edit.cshtml
@@ -13,11 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="ProyectoId" class="control-label"></label>
-                <select asp-for="ProyectoId" class="form-control" asp-items="ViewBag.ProyectoId"></select>
-                <span asp-validation-for="ProyectoId" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="ProyectoId" />
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -25,15 +21,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
+                <textarea asp-for="Descripcion" class="form-control"></textarea>
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
-             <div class="form-group pl-3">
+            <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-info" />
             </div>
         </form>
-        <div class="pt-3 pl-3">
-            <a asp-action="Index">
+        <div class="pt-3 ">
+            <a asp-controller="Trabajos" asp-action="Index" asp-route-id="@Model.ProyectoId">
                 <button class="btn btn-primary">Volver al listado</button>
             </a>
         </div>
@@ -42,5 +38,11 @@
 
 
 @section Scripts {
+    <script type="text/javascript" src="~/js/Administrador/Trabajos/Trabajos.js"></script>
+    <script>
+        $(document).ready(function () {
+            Trabajos.init();
+        });
+    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
