--- a/Honcizek/Views/Administrador/Trabajos/Index.cshtml
+++ b/Honcizek/Views/Administrador/Trabajos/Index.cshtml
@@ -5,61 +5,72 @@
 }
 
 <h1>Listado de Trabajos</h1>
+@if (!(bool)ViewData["error"])
+{
+    <div>
 
-<p>
-    <a asp-action="Create" asp-route-id="@ViewData["proyecto_id"]">
-        <button class="btn btn-info">Crear nuevo</button>
-    </a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Descripcion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Proyecto)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Proyecto.Estado)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">
-					<button class="btn btn-primary">Editar
-					</button>
-				</a>
-				<a asp-action="Details" asp-route-id="@item.Id">
-					<button class="btn btn-info">Detalles
-					</button>
-				</a>
-				<a asp-action="Delete" asp-route-id="@item.Id">
-					<button class="btn btn-danger">Eliminar
-					</button>
-				</a>
-            </td>
-        </tr>
+        <p class="float-left">
+            <a asp-action="Create" asp-route-id="@ViewData["proyecto_id"]">
+                <button class="btn btn-info">Crear nuevo</button>
+            </a>
+        </p>
+        <p class="float-lg-right">
+            <a asp-controller="Proyectos" asp-action="Edit" asp-route-id="@ViewData["proyecto_id"]">
+                <button class="btn btn-warning">
+                    Volver al proyecto
+                </button>
+            </a>
+        </p>
+    </div>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </th>
+                
+                <th>
+                    @Html.DisplayNameFor(model => model.Proyecto)
+                </th>
+                <th class="w-25"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nombre)
+                    </td>
+                    
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Proyecto.Nombre)
+                    </td>
+                    <td class="float-right">
+                        <a asp-action="Edit" asp-route-id="@item.Id">
+                            <button class="btn btn-primary">
+                                Editar
+                            </button>
+                        </a>
+                        <a asp-action="Details" asp-route-id="@item.Id">
+                            <button class="btn btn-info">
+                                Detalles
+                            </button>
+                        </a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">
+                            <button class="btn btn-danger">
+                                Eliminar
+                            </button>
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
-    </tbody>
-</table>
-<div class="pt-2 float-lg-right">
-    <a asp-controller="Proyectos" asp-action="Edit" asp-route-id="@ViewData["proyecto_id"]">
-        <button class="btn btn-warning">
-            Volver al proyecto
-        </button>
-    </a>
-</div>
+else
+{
+    <h4>Est&aacute;s intentando ver los trabajos de un proyecto que no existe.</h4>
+    <span>Prueba a volver al <a class="honci-link" asp-controller="Proyectos" asp-action="Index">Listado de productos</a> e int&eacute;ntalo de nuevo</span>
+}
