Comenzados participantes de proyecto

--- a/Honcizek/Views/Administrador/Proyectos/Index.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Index.cshtml
@@ -119,7 +119,7 @@
                         </a>
                         <a asp-action="Details" asp-route-id="@item.Id">
                             <button class="btn btn-info">
-                                Detalles
+                                Participantes
                             </button>
                         </a>
                         <a asp-action="Delete" asp-route-id="@item.Id">
