--- a/Honcizek/Views/Administrador/Proyectos/Create.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Create.cshtml
@@ -62,7 +62,7 @@
                     <select asp-for="Estado" class="form-control" asp-items="ViewBag.Estado"></select>
                 </div>
             </div>
-            <div class="row eq-height fase">
+            <div class="row eq-height fase pl-3">
                 <div class="col-12 mb-4 text-center">
                     <h2 class="d-block mb-0 text-dark">Fase</h2> <br>
                   
