--- a/Honcizek/Views/Administrador/Proyectos/Index.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Index.cshtml
@@ -117,7 +117,7 @@
                                 Editar
                             </button>
                         </a>
-                        <a asp-action="Details" asp-route-id="@item.Id">
+                        <a asp-controller="Participantes" asp-action="Index" asp-route-id="@item.Id">
                             <button class="btn btn-info">
                                 Participantes
                             </button>
