--- a/Honcizek/Views/Administrador/Trabajos/Create.cshtml
+++ b/Honcizek/Views/Administrador/Trabajos/Create.cshtml
@@ -43,7 +43,7 @@
 else
 {
     <h4>Est&aacute;s intentando crear un trabajo para un proyecto que no existe.</h4>
-    <span>Prueba a volver al <a class="honci-link" asp-controller="Proyectos" asp-action="Index">Listado de productos</a> e int&eacute;ntalo de nuevo</span>
+    <span>Prueba a volver al <a class="honci-link" asp-controller="Proyectos" asp-action="Index">Listado de proyectos</a> e int&eacute;ntalo de nuevo</span>
 }
 
 @section Scripts {
