--- a/Honcizek/Views/Administrador/Participantes/Delete.cshtml
+++ b/Honcizek/Views/Administrador/Participantes/Delete.cshtml
@@ -6,30 +6,18 @@
 
 <h1>Delete</h1>
 
-<h3>Seguro que quieres eliminarlo?</h3>
+<h3>Seguro que quieres quitar a @Model.Usuario.FullName del proyecto @Model.Proyecto.Nombre?</h3>
 <div>
-    <h4>ProyectosParticipantes</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Proyecto)
-        </dt>
-        <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Proyecto.Estado)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Usuario)
-        </dt>
-        <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Usuario.Id)
-        </dd class>
-    </dl>
-    
-    <form class="pb-3" asp-action="Delete">
+
+    <div class="row justify-content-center">
+
+    <a asp-controller="Participantes" asp-action="Index" asp-route-id="@Model.ProyectoId">
+        <button class="btn btn-primary">Volver al listado</button>
+    </a>
+    <form class="px-3" asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Borrar" class="btn btn-danger" />
     </form>
-	<a asp-action="Index">
-			<button class="btn btn-primary">Volver al listado</button>
-		</a>
+    </div>
 </div>
