Ahora las claves van por md5

--- a/Honcizek/Views/Shared/Administrador.cshtml
+++ b/Honcizek/Views/Shared/Administrador.cshtml
@@ -51,7 +51,7 @@
                    </span>
                </div>
            </a>
-            <a asp-controller="Clientes" asp-action="Index">
+            <a asp-controller="Trabajadores" asp-action="Index">
                 <div class="menu-option Trabajadores">
                     <span>
                         Trabajadores
