--- a/Honcizek/Views/Administrador/Clientes/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Edit.cshtml
@@ -20,8 +20,8 @@
                     <span asp-validation-for="Login" class="text-danger"></span>
                 </div>
                 <div class="form-group col-4">
-                    <label asp-for="Clave" class="control-label"></label>
-                    <input asp-for="Clave" class="form-control" />
+                    <label asp-for="Clave" class="control-label">Contrase&ntilde;a s&oacute;lo si cambia</label>
+                    <input type="password" asp-for="Clave" class="form-control" />
                     <span asp-validation-for="Clave" class="text-danger"></span>
                 </div>
             </div>
@@ -120,11 +120,8 @@
 @section Scripts {
     <script type="text/javascript" src="~/js/Administrador/Clientes/Clientes.js"></script>
     <script>
-        $('#localidad').selectpicker();
-    </script>
-    <script>
     $(document).ready(function () {
-        Clientes.init();
+        Clientes.init(@Model.Clave);
     });
     </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial.cshtml");}
