Validacion precios y hecha renovacion

--- a/Honcizek/Views/Administrador/Proyectos/Details.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Details.cshtml
@@ -101,7 +101,7 @@
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Cliente.Tipo)
+            @Html.DisplayFor(model => model.Cliente.FullName)
         </dd>
     </dl>
 </div>
