--- a/Honcizek/Views/Administrador/Suscripciones/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Suscripciones/Edit.cshtml
@@ -9,72 +9,81 @@
 <h4>Suscripciones</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
-                <span asp-validation-for="ClienteId" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="ClienteId" class="control-label">Cliente</label>
+                    <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Tipo" class="control-label"></label>
+                    <select asp-for="Tipo" class="form-control" asp-items="ViewBag.Tipo"></select>
+                </div>
+                <div class="form-group col-4 proyecto">
+                    <label asp-for="ProyectoId" class="control-label">Proyecto</label>
+                    <select asp-for="ProyectoId" class="form-control" asp-items="ViewBag.ProyectoId"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Tipo" class="control-label"></label>
-                <input asp-for="Tipo" class="form-control" />
-                <span asp-validation-for="Tipo" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="AgenteId" class="control-label">Programador encargado</label>
+                    <select asp-for="AgenteId" class="form-control" asp-items="ViewBag.AgenteId"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Periodicidad" class="control-label"></label>
+                    <select asp-for="Periodicidad" class="form-control" asp-items="ViewBag.Periodicidad"></select>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="FechaDesde" class="control-label">Fecha inicio</label>
+                    <input type="date" asp-for="FechaDesde" class="form-control" />
+                    <span asp-validation-for="FechaDesde" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4 periodicidad">
+                    <label asp-for="FechaHasta" class="control-label">Fecha finalizaci&oacute;n</label>
+                    <input type="date" readonly asp-for="FechaHasta" class="form-control" />
+                    <span asp-validation-for="FechaHasta" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ProyectoId" class="control-label"></label>
-                <select asp-for="ProyectoId" class="form-control" asp-items="ViewBag.ProyectoId"></select>
-                <span asp-validation-for="ProyectoId" class="text-danger"></span>
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="PrecioAlta" class="control-label"></label>
+                    <input type="number" min="0" value="@Model.PrecioAlta" asp-for="PrecioAlta" class="form-control" />
+                    <span asp-validation-for="PrecioAlta" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="PrecioPeriodo" class="control-label"></label>
+                    <input type="number" min="0" value="@Model.PrecioPeriodo" asp-for="PrecioPeriodo" class="form-control" />
+                    <span asp-validation-for="PrecioPeriodo" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="Renovacion" class="control-label"></label>
+                    <input type="checkbox" name="Renovacion" value="1" @(Model.Renovacion == 1 ? "checked" : "") class="form-control check w-25" />
+                    <span asp-validation-for="Renovacion" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="AgenteId" class="control-label"></label>
-                <select asp-for="AgenteId" class="form-control" asp-items="ViewBag.AgenteId"></select>
-                <span asp-validation-for="AgenteId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaDesde" class="control-label"></label>
-                <input asp-for="FechaDesde" class="form-control" />
-                <span asp-validation-for="FechaDesde" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaHasta" class="control-label"></label>
-                <input asp-for="FechaHasta" class="form-control" />
-                <span asp-validation-for="FechaHasta" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Renovacion" class="control-label"></label>
-                <input asp-for="Renovacion" class="form-control" />
-                <span asp-validation-for="Renovacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PrecioAlta" class="control-label"></label>
-                <input asp-for="PrecioAlta" class="form-control" />
-                <span asp-validation-for="PrecioAlta" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PrecioPeriodo" class="control-label"></label>
-                <input asp-for="PrecioPeriodo" class="form-control" />
-                <span asp-validation-for="PrecioPeriodo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Periodicidad" class="control-label"></label>
-                <input asp-for="Periodicidad" class="form-control" />
-                <span asp-validation-for="Periodicidad" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Observaciones" class="control-label"></label>
-                <input asp-for="Observaciones" class="form-control" />
-                <span asp-validation-for="Observaciones" class="text-danger"></span>
-            </div>
-             <div class="form-group pl-3">
-                <input type="submit" value="Guardar" class="btn btn-info" />
+            <div class="row col-12">
+                <div class="form-group col-6">
+                    <label asp-for="Observaciones" class="control-label"></label>
+                    <textarea asp-for="Observaciones" class="form-control"></textarea>
+                    <span asp-validation-for="Observaciones" class="text-danger"></span>
+                </div>
+                <div class="form-group col-6">
+                    <label class="control-label"></label>
+                    <span id="ErrorPrecio" class="text-danger d-none">Debes introducir 1 precio de alta y/o 1 precio por periodo</span>
+                </div>
+                <div class="form-group pl-3">
+                    <input type="submit" value="Crear" class="btn btn-info" />
+                </div>
             </div>
         </form>
         <div class="pt-3 pl-3">
@@ -87,5 +96,11 @@
 
 
 @section Scripts {
+    <script type="text/javascript" src="~/js/Administrador/Suscripciones/Suscripciones.js"></script>
+    <script>
+        $(document).ready(function () {
+            Suscripciones.init();
+        });
+    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
