--- a/Honcizek/Views/Administrador/Suscripciones/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Suscripciones/Edit.cshtml
@@ -82,7 +82,7 @@
                     <span id="ErrorPrecio" class="text-danger d-none">Debes introducir 1 precio de alta y/o 1 precio por periodo</span>
                 </div>
                 <div class="form-group pl-3">
-                    <input type="submit" value="Crear" class="btn btn-info" />
+                    <input type="submit" value="Guardar" class="btn btn-info" />
                 </div>
             </div>
         </form>
